cholera 0.7.9.9072
==================

- add latlongNearestPump(metric = "euclidean").


cholera 0.7.9.9071
==================

- add addVoronoiB().


cholera 0.7.9.9070
==================

- move latlongWalkingPath() to latlongWalkingPath.R and estimate path length.


cholera 0.7.9.9069
==================

- use aes_string() in profile2D().


cholera 0.7.9.9068
==================

- exclude latlong variables in profilePerspective() for profile2D().
- amend ggplot2 syntax in profile2D().


cholera 0.7.9.9067
==================

- add note on Voronoi diagrams with latlong data.


cholera 0.7.9.9066
==================

- migrate from sp::spDistsN1() to geosphere::distGeo().


cholera 0.7.9.9065
==================

- use loess() instead of lm() in meterLatitude().
- fix typo; clean syntax and documentation in meterLatitude() and
  meterLatLong().


cholera 0.7.9.9064
==================

- add/use meterLatitude() and meterLatLong() in latlongVoronoiB().


cholera 0.7.9.9063
==================

- add/set neighborhoodVoronoiB(euclidean.paths = FALSE).


cholera 0.7.9.9062
==================

- fix neighborhoodVoronoiB(pump.select = NULL) and update README example.


cholera 0.7.9.9061
==================

- add neighborhoodVoronoiB() lat-long prototype.


cholera 0.7.9.9060
==================

- add/set addPump(latlong = FALSE).


cholera 0.7.9.9059
==================

- add latlongVoronoiB() prototype.
- add/set latlongVoronoiB(pump.select = NULL, vestry = FALSE).


cholera 0.7.9.9058
==================

- add/set voronoiPolygons(latlong = FALSE).


cholera 0.7.9.9057
==================

- add longitude and latitude to ortho.proj.pump and ortho.proj.pump.vestry.
- add data reset exception to latlongOrthoPump().
- remove path argument and use ortho.proj.pump and ortho.proj.pump.vestry in
  addVoronoi().


cholera 0.7.9.9056
==================

- add pumpsVoronoiPolygons() and latlongVoronoi().
- add longitude and latitude voronoi.polygons and voronoi.polygons.vestry.